tests/baselines/reference/importNonStringLiteral.errors.txt
==== tests/cases/compiler/importNonStringLiteral.ts (4 errors) ====
    var x = "filename";
    import foo = require(x); // invalid
                         ~
!!! error TS1003: Identifier expected.
                          ~
!!! error TS1005: ';' expected.
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2071: Unable to resolve external module ''.
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
    